#Test commit
Для повышения качества кода:
- переписаны юнит тесты для сервисов.